<resources>
    <string name="app_name">NavigationApp</string>
    <string name="hello">Hello, Register to get started</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="students">Cities</string>
    <string name="newyork">Newyork</string>
    <string name="ontario">Ontario</string>
    <string name="dubai">Dubai</string>
    <string name="cairo">Cairo</string>
    <string name="paris">Paris</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="navigate_to_fragment">Navigate to Next Fragment</string>
    <string name="login_activity">Login Activity</string>
    <string name="main_activity">Main Activity</string>
</resources>